# automaters

./: Cargo.toml  LICENSE  README.md
src/: btset.rs  dfa.rs  fsm.rs  interfaces.rs  lib.rs  main.rs  nfa.rs  nfae.rs  state.rs  symbol.rs  transition.rs
src/automates/: DFA1.json  DFA2.json  NFA1e.json  NFA2.json  NFA2e.json  NFA3e.json  NFATODFA.json  NFATODFA2.json  res.txt
